cmake_minimum_required(VERSION 3.13)
project(test_example_project)
find_package(GTest)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -iquote platform/linux")
include_directories(/workspace/microps/platform/linux)
add_executable(example_test net_test.cpp ../net.c ../util.c)
target_link_libraries(example_test ${GTEST_BOTH_LIBRARIES} pthread)
target_include_directories(example_test PUBLIC ${GTEST_INCLUDE_DIRS})